add eval of all models - auc-roc pending

--- a/src/evaluation_segmentation.ipynb
+++ b/src/evaluation_segmentation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -18,7 +18,7 @@
    "source": [
     "import torch\n",
     "from util.data import get_dl, get_train_ds, get_val_ds\n",
-    "from util.training_utils import train, check_accuracy, save, load, check_accuracy_v2,  check_accuracy_v3, get_all_metrics, get_all_metrics_2\n",
+    "from util.training_utils import train, check_accuracy, save, load, get_all_metrics, get_all_metrics_2\n",
     "from models.Base3DUNet import Base3DUNet\n",
     "from models.Attention3DUNet import Attention3UNet\n",
     "from models.Residual3DUNet import Res3DUNet\n",
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "import gc\n",
@@ -49,10 +49,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "outputs": [],
    "source": [
-    "model = Base3DUNet(3, 3, features=[64, 128, 256, 512], up_sample=True).to(DEVICE)"
+    "model = Base3DUNet(3, 3, features=[64, 128, 256, 512], up_sample=True).to(DEVICE)\n",
+    "print(f\"total learnable parameters = {sum(p.numel() for p in model.parameters() if p.requires_grad)}\")\n"
    ],
    "metadata": {
     "collapsed": false
@@ -60,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stdout",
@@ -70,9 +71,9 @@
       " Accuracy (TC,ET,WT): \n",
       " 99.3601 , 99.6902, 99.0066\n",
       "Dice Score (TC,ET,WT): \n",
-      " 0.7821627855300903 , 0.6888573169708252, 0.8394877314567566\n",
+      " 0.7821628451347351 , 0.68885737657547, 0.839487612247467\n",
       "IoU Score (TC,ET,WT): \n",
-      " 0.6852228045463562 , 0.5777104496955872, 0.7514510154724121\n",
+      " 0.6852228045463562 , 0.5777105689048767, 0.7514512538909912\n",
       " Precision (TC,ET,WT): \n",
       " --> 40.6819 , 80.0799, 16.7454\n",
       " Recall (TC,ET,WT): \n",
@@ -93,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "outputs": [
     {
      "name": "stdout",
@@ -103,9 +104,9 @@
       " Accuracy (TC,ET,WT): \n",
       " 99.3121 , 99.6928, 99.0178\n",
       "Dice Score (TC,ET,WT): \n",
-      " 0.7719242572784424 , 0.6890219449996948, 0.8466905951499939\n",
+      " 0.7719240784645081 , 0.6890219449996948, 0.8466907143592834\n",
       "IoU Score (TC,ET,WT): \n",
-      " 0.6696090698242188 , 0.5770222544670105, 0.7578733563423157\n",
+      " 0.6696090698242188 , 0.5770220756530762, 0.7578732371330261\n",
       " Precision (TC,ET,WT): \n",
       " --> 41.4878 , 84.0877, 16.1345\n",
       " Recall (TC,ET,WT): \n",
@@ -126,11 +127,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "clear()\n",
-    "model = Base3DUNet(3, 3, features=[64, 128, 256, 512], up_sample=False).to(DEVICE)"
+    "model = Base3DUNet(3, 3, features=[64, 128, 256, 512], up_sample=False).to(DEVICE)\n",
+    "print(f\"total learnable parameters = {sum(p.numel() for p in model.parameters() if p.requires_grad)}\")\n"
    ],
    "metadata": {
     "collapsed": false
@@ -138,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "outputs": [
     {
      "name": "stdout",
@@ -148,9 +150,9 @@
       " Accuracy (TC,ET,WT): \n",
       " 99.2633 , 99.6768, 98.9967\n",
       "Dice Score (TC,ET,WT): \n",
-      " 0.7423750162124634 , 0.6710378527641296, 0.8460586071014404\n",
+      " 0.7423750162124634 , 0.6710379719734192, 0.8460584282875061\n",
       "IoU Score (TC,ET,WT): \n",
-      " 0.6411216259002686 , 0.5546414852142334, 0.7568053007125854\n",
+      " 0.6411218643188477 , 0.5546413660049438, 0.7568052411079407\n",
       " Precision (TC,ET,WT): \n",
       " --> 46.9100 , 97.4532, 14.9651\n",
       " Recall (TC,ET,WT): \n",
@@ -171,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "outputs": [
     {
      "name": "stdout",
@@ -181,9 +183,9 @@
       " Accuracy (TC,ET,WT): \n",
       " 99.3517 , 99.7012, 99.0492\n",
       "Dice Score (TC,ET,WT): \n",
-      " 0.7789778709411621 , 0.698265552520752, 0.8524792194366455\n",
+      " 0.7789777517318726 , 0.6982654929161072, 0.8524793386459351\n",
       "IoU Score (TC,ET,WT): \n",
-      " 0.6808264255523682 , 0.5862983465194702, 0.7661637663841248\n",
+      " 0.6808264851570129 , 0.5862982869148254, 0.7661640048027039\n",
       " Precision (TC,ET,WT): \n",
       " --> 38.6881 , 85.5733, 16.1231\n",
       " Recall (TC,ET,WT): \n",
@@ -204,11 +206,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "outputs": [],
    "source": [
     "clear()\n",
-    "model = Attention3UNet(3, 3, features=[64, 128, 256, 512], up_sample=False).to(DEVICE)"
+    "model = Attention3UNet(3, 3, features=[64, 128, 256, 512], up_sample=False).to(DEVICE)\n",
+    "print(f\"total learnable parameters = {sum(p.numel() for p in model.parameters() if p.requires_grad)}\")\n"
    ],
    "metadata": {
     "collapsed": false
@@ -216,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "outputs": [
     {
      "name": "stdout",
@@ -226,9 +229,9 @@
       " Accuracy (TC,ET,WT): \n",
       " 99.3544 , 99.6905, 99.0364\n",
       "Dice Score (TC,ET,WT): \n",
-      " 0.7816533446311951 , 0.6932132840156555, 0.8522657155990601\n",
+      " 0.7816538214683533 , 0.6932134032249451, 0.8522657752037048\n",
       "IoU Score (TC,ET,WT): \n",
-      " 0.6859501004219055 , 0.5824636220932007, 0.7657946348190308\n",
+      " 0.6859500408172607 , 0.5824635624885559, 0.765794575214386\n",
       " Precision (TC,ET,WT): \n",
       " --> 42.0900 , 82.9900, 16.1025\n",
       " Recall (TC,ET,WT): \n",
@@ -249,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "outputs": [
     {
      "name": "stdout",
@@ -259,9 +262,9 @@
       " Accuracy (TC,ET,WT): \n",
       " 99.2950 , 99.6922, 99.0070\n",
       "Dice Score (TC,ET,WT): \n",
-      " 0.7608307003974915 , 0.6907647252082825, 0.8438194394111633\n",
+      " 0.760830819606781 , 0.6907649040222168, 0.8438195586204529\n",
       "IoU Score (TC,ET,WT): \n",
-      " 0.6616765856742859 , 0.5782598853111267, 0.7573457956314087\n",
+      " 0.661676287651062 , 0.5782598853111267, 0.7573460936546326\n",
       " Precision (TC,ET,WT): \n",
       " --> 42.0382 , 86.3042, 16.2116\n",
       " Recall (TC,ET,WT): \n",
@@ -282,11 +285,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "outputs": [],
    "source": [
     "clear()\n",
-    "model = Attention3UNet(3, 3, features=[64, 128, 256, 512], up_sample=True).to(DEVICE)"
+    "model = Attention3UNet(3, 3, features=[64, 128, 256, 512], up_sample=True).to(DEVICE)\n",
+    "print(f\"total learnable parameters = {sum(p.numel() for p in model.parameters() if p.requires_grad)}\")\n"
    ],
    "metadata": {
     "collapsed": false
@@ -294,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "outputs": [
     {
      "name": "stdout",
@@ -304,9 +308,9 @@
       " Accuracy (TC,ET,WT): \n",
       " 99.3225 , 99.6896, 99.0118\n",
       "Dice Score (TC,ET,WT): \n",
-      " 0.7768449783325195 , 0.6793321967124939, 0.844255805015564\n",
+      " 0.7768449783325195 , 0.6793325543403625, 0.844255805015564\n",
       "IoU Score (TC,ET,WT): \n",
-      " 0.674619734287262 , 0.5670403242111206, 0.7549707889556885\n",
+      " 0.6746198534965515 , 0.5670403242111206, 0.7549707293510437\n",
       " Precision (TC,ET,WT): \n",
       " --> 42.1787 , 92.9405, 16.8040\n",
       " Recall (TC,ET,WT): \n",
@@ -327,19 +331,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Attention3DUNet with Dice Loss - (Upsampler version)\n",
+      "Attention3DUNet with BCE-Dice Loss - (Upsampler version)\n",
       " Accuracy (TC,ET,WT): \n",
       " 99.3204 , 99.6839, 98.9921\n",
       "Dice Score (TC,ET,WT): \n",
-      " 0.7743038535118103 , 0.6768757700920105, 0.8426200747489929\n",
+      " 0.7743036150932312 , 0.6768759489059448, 0.8426199555397034\n",
       "IoU Score (TC,ET,WT): \n",
-      " 0.6734684109687805 , 0.5659209489822388, 0.7533087730407715\n",
+      " 0.6734686493873596 , 0.5659208297729492, 0.7533087730407715\n",
       " Precision (TC,ET,WT): \n",
       " --> 43.0446 , 89.8057, 16.7121\n",
       " Recall (TC,ET,WT): \n",
@@ -351,7 +355,7 @@
    ],
    "source": [
     "load(model,\"weights/attention/att3d_100e_adam_b4_bce_dice\")\n",
-    "print(\"Attention3DUNet with Dice Loss - (Upsampler version)\")\n",
+    "print(\"Attention3DUNet with BCE-Dice Loss - (Upsampler version)\")\n",
     "get_all_metrics_2(val_dl, model, DEVICE)"
    ],
    "metadata": {
@@ -360,12 +364,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "outputs": [],
    "source": [
     "clear()\n",
-    "model = Res3DUNet(3, 3).to(DEVICE)"
+    "model = Res3DUNet(3, 3).to(DEVICE)\n",
+    "print(f\"total learnable parameters = {sum(p.numel() for p in model.parameters() if p.requires_grad)}\")\n"
    ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Residual3DUNet with Dice Loss\n",
+      " Accuracy (TC,ET,WT): \n",
+      " 98.0628 , 99.1373, 97.7190\n",
+      "Dice Score (TC,ET,WT): \n",
+      " 0.0 , 0.0, 0.655088484287262\n",
+      "IoU Score (TC,ET,WT): \n",
+      " 0.0 , 0.0, 0.5106545090675354\n",
+      " Precision (TC,ET,WT): \n",
+      " --> inf , inf, 22.2087\n",
+      " Recall (TC,ET,WT): \n",
+      " --> 34.2025 , 77.6469, 14.7017\n",
+      " F1-score (TC,ET,WT): \n",
+      " --> nan , nan, 17.6918\n"
+     ]
+    }
+   ],
+   "source": [
+    "load(model,\"weights/residual/3d_res_4layer_100e_adam_dice\")\n",
+    "print(\"Residual3DUNet with Dice Loss\")\n",
+    "get_all_metrics_2(val_dl, model, DEVICE)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Residual3DUNet with BCE-Dice Loss\n",
+      " Accuracy (TC,ET,WT): \n",
+      " 99.2630 , 99.6664, 98.9079\n",
+      "Dice Score (TC,ET,WT): \n",
+      " 0.7453449368476868 , 0.6737334132194519, 0.8274587988853455\n",
+      "IoU Score (TC,ET,WT): \n",
+      " 0.6367512345314026 , 0.5583897233009338, 0.7322196364402771\n",
+      " Precision (TC,ET,WT): \n",
+      " --> 44.4874 , 89.2285, 16.5262\n",
+      " Recall (TC,ET,WT): \n",
+      " --> 34.6211 , 78.0613, 14.8806\n",
+      " F1-score (TC,ET,WT): \n",
+      " --> 38.9390 , 83.2722, 15.6603\n"
+     ]
+    }
+   ],
+   "source": [
+    "load(model,\"weights/residual/3d_res_4layer_100e_adam_bce_dice\")\n",
+    "print(\"Residual3DUNet with BCE-Dice Loss\")\n",
+    "get_all_metrics_2(val_dl, model, DEVICE)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false
    }
